# rust_api

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  Postman.http  README.md  attendance_requests.http  docker-compose.yml  entrypoint.sh
migration/: Cargo.toml
migration/src/: Cargo.toml  lib.rs  m20220101_000001_create_attendance_table.rs  m20220102_000002_seed_attendance.rs  m20220103_000003_create_banner_table.rs  m20220104_000004_seed_banner.rs
src/: config.rs  handlers.rs  main.rs  models.rs  responses.rs  routes.rs
src/entity/: attendance.rs  banner.rs  mod.rs
