[package]
name = "rest_api"
version = "0.1.0"
edition = "2024"

[dependencies]

actix-web = "4"
actix-multipart = "0.7"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tokio-util = { version = "0.7", features = ["io"] }
futures-util = "0.3"

# SeaORM & migration
sea-orm = { version = "1.0", features = ["macros", "runtime-tokio-native-tls", "sqlx-mysql"] }
sea-orm-migration = "1.0"
config = "0.15.14"
entity = "0.3.2"
async-trait = "0.1"


[workspace]
members = [
    "migration",
]
