[package]
name = "migration"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = "1.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.41"

[dependencies.sea-orm]
version = "1.0"
features = [
  "sqlx-mysql",
  "runtime-tokio-native-tls",
  "macros",
]
